--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <li><a href = "3.html"> JavaScripts</a></li>
         </ol>
         <p>
-            <iframe width="500px" height="500px" src="https://www.youtube.com/embed/X5xcqJCblVg?autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="50%" height="50%" src="https://www.youtube.com/embed/X5xcqJCblVg?autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </p> 
     </body>
 </html>
