--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <p style="margin-top: 20px;"><a href = "https://www.naver.com" target="_blank" title="네이버">네이버</a></p>
         <ol>
             <li><a href = "1.html"> HTML</a></li>
-            <li><a href = "2.html"> CSS</a></li>
-            <li><a href = "3.html"> JavaScripts</a></li>
+            <li><a href = "2.html"> Chat</a></li>
+            <li><a href = "3.html"> Twitch 페이커 영상</a></li>
         </ol>
         <p>
             <iframe width="50%" height="25%" src="https://www.youtube.com/embed/X5xcqJCblVg?autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
