--- a/2.html
+++ b/2.html
@@ -1,33 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>WEB2 - CSS</title>
+  <title>2.html - Chat</title>
   <meta charset="UTF-8">
 </head>
 <body>
-  <h1><a href = "index.html">WEB</a></h1>
+  <h1><a href = "index.html">Main-Home</a></h1>
   <ol>
-    <li><a href = "1.html"> HTML</a></li>
-    <li><a href = "2.html"> CSS</a></li>
-    <li><a href = "3.html"> JavaScripts</a></li>
+    <li><a href = "1.html">1번</a></li>
+    <li><a href = "2.html">Chat</a></li>
+    <li><a href = "3.html">(페이커짤)</a></li>
   </ol>
-  <!-- <h1>TEST</h1>
-  <ul>
-    <li>Test1</li>
-    <li>Test2</li>
-    <li>Test3</li>
-  </ul> -->
-  <h1>CSS 무엇인가?</h1>
-  <p>대충 CSS 설명하는 얘기
-    <img src="coding.jpg" width="70%">
-  </p>
-  <p style="margin-top:50px;"> HTML elements are the building blocks of HTML pages.
-    With HTML constructs, images and other objects, such as interactive forms, maybe
-    embedded into the rendered page. It provides a means to create structured documents by
-    denoting structural semantics for text such as headings, paragraphs, lists,
-    links, quotes and other items. HTML elements are delineated by tags,
-    written using angle brackets.
-  </p>
-  <p style="margin-top:70px"><a href = "https://www.naver.com" target="_blank" title ="네이버 바로가기">Naver</a></p>
+   <!--Start of Tawk.to Script-->
+  <script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    s1.async=true;
+    s1.src='https://embed.tawk.to/618a0f606bb0760a4941c074/1fk1ko4ur';
+    s1.charset='UTF-8';
+    s1.setAttribute('crossorigin','*');
+    s0.parentNode.insertBefore(s1,s0);
+    })();
+  </script>
+  <!--End of Tawk.to Script-->
 </body>
 </html>
