--- a/3.html
+++ b/3.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>WEB3 - JavaScripts</title>
+  <title>3.html (FAKER)</title>
   <meta charset="UTF-8">
 </head>
 <body>
-  <h1><a href = "index.html">WEB</a></h1>
-  <h1><a href = "http://www.naver.com" target="_blank" title = "naver 바로가기"></a></h1>
-  <p style="margin-top:30px; "><a href = "https://www.naver.com" target="_blank" title ="네이버 바로가기">Naver</a></p>
+  <h1><a href = "index.html">Main-Home</a></h1>
   <ol>
-    <li><a href = "1.html"> HTML</a></li>
-    <li><a href = "2.html"> CSS</a></li>
-    <li><a href = "3.html"> JavaScripts</a></li>
+    <li><a href = "1.html">1번</a></li>
+    <li><a href = "2.html">Chat</a></li>
+    <li><a href = "3.html">(페이커짤)</a></li>
   </ol>
   <!-- <h1>TEST</h1>
   <ul>
@@ -19,17 +17,12 @@
     <li>Test2</li>
     <li>Test3</li>
   </ul> -->
-  <h1>JavaScripts란 무엇인가?</h1>
-  <p>대충 JavaScripts 설명하는 얘기
+  <h1>페이커 방송 짤</h1>
+  <!-- <p>대충 JavaScripts 설명하는 얘기
     <img src="coding.jpg" width="70%">
-  </p>
-  <p style="margin-top:50px;"> HTML elements are the building b
-    cks of HTML pages.
-    With HTML constructs, images and other objects, such as interactive forms, maybe
-    embedded into the rendered page. It provides a means to create structured documents by
-    denoting structural semantics for text such as headings, paragraphs, lists,
-    links, quotes and other items. HTML elements are delineated by tags,
-    written using angle brackets.
+  </p> -->  
+  <p>
+    <div style="width: 100%; height: 0px; position: relative; padding-bottom: 56.250%;"><iframe src="https://streamable.com/e/yut110" frameborder="0" width="100%" height="100%" allowfullscreen style="width: 100%; height: 100%; position: absolute;"></iframe></div>
   </p>
 </body>
 </html> 
