All files modified

--- a/2.html
+++ b/2.html
@@ -1,28 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>2.html - Chat</title>
+  <title>2.html - </title>
   <meta charset="UTF-8">
 </head>
 <body>
   <h1><a href = "index.html">Main-Home</a></h1>
   <ol>
-    <li><a href = "1.html">1번</a></li>
-    <li><a href = "2.html">Chat</a></li>
-    <li><a href = "3.html">(페이커짤)</a></li>
-  </ol>
-   <!--Start of Tawk.to Script-->
-  <script type="text/javascript">
-    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-    (function(){
-    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-    s1.async=true;
-    s1.src='https://embed.tawk.to/618a0f606bb0760a4941c074/1fk1ko4ur';
-    s1.charset='UTF-8';
-    s1.setAttribute('crossorigin','*');
-    s0.parentNode.insertBefore(s1,s0);
-    })();
-  </script>
-  <!--End of Tawk.to Script-->
+    <li><a href = "1.html"> 1번</a></li>
+    <li><a href = "2.html"> 2번</a></li>
+    <li><a href = "3.html"> 3번(임시로 페이커 짤)</a></li>
+  </ol> 
 </body>
 </html>
