--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
         <h1>Study Test Homepage</h1>
         <p style="margin-top: 20px;"><a href = "https://www.naver.com" target="_blank" title="네이버">네이버</a></p>
         <ol>
-            <li><a href = "1.html"> HTML</a></li>
-            <li><a href = "2.html"> Chat</a></li>
-            <li><a href = "3.html"> Twitch 페이커 영상</a></li>
+            <li><a href = "1.html"> 1번</a></li>
+            <li><a href = "2.html"> 2번</a></li>
+            <li><a href = "3.html"> 3번(임시로 페이커 짤)</a></li>
         </ol>
         <p>
             <iframe width="50%" height="25%" src="https://www.youtube.com/embed/X5xcqJCblVg?autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </p> 
-        <p style = "margin-top: 70px;"> 
+        <p style = "margin-top: 450px;"> 
         <!-- Live re  Code (댓글기능)-->
         <div id="lv-container" data-id="city" data-uid="MTAyMC81NDY1Ni8zMTEyNw==">
             <script type="text/javascript">
@@ -33,6 +33,19 @@
             </script>
         <noscript> 라이브리 댓글 작성을 위해 JavaScript를 활성화 해주세요</noscript>
         </div>
-        </p>
+        </p>        
+          <!--Start of Tawk.to Script-->
+        <script type="text/javascript">
+            var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+            (function(){
+            var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+            s1.async=true;
+            s1.src='https://embed.tawk.to/618a0f606bb0760a4941c074/1fk1ko4ur';
+            s1.charset='UTF-8';
+            s1.setAttribute('crossorigin','*');
+            s0.parentNode.insertBefore(s1,s0);
+            })();
+        </script>
+        <!--End of Tawk.to Script-->
     </body>
 </html>
