--- a/3.html
+++ b/3.html
@@ -7,9 +7,9 @@
 <body>
   <h1><a href = "index.html">Main-Home</a></h1>
   <ol>
-    <li><a href = "1.html">1번</a></li>
-    <li><a href = "2.html">Chat</a></li>
-    <li><a href = "3.html">(페이커짤)</a></li>
+    <li><a href = "1.html"> 1번</a></li>
+    <li><a href = "2.html"> 2번</a></li>
+    <li><a href = "3.html"> 3번(임시로 페이커 짤)</a></li>
   </ol>
   <!-- <h1>TEST</h1>
   <ul>
