--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <p>
             <iframe width="50%" height="25%" src="https://www.youtube.com/embed/X5xcqJCblVg?autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </p> 
-        <p style = "margin-top: 400px;"> 
+        <p style = "margin-top: 400px;" width = "50%"> 
         <!-- Live re  Code (댓글기능)-->
-        <div id="lv-container" data-id="city" data-uid="MTAyMC81NDY1Ni8zMTEyNw==">
+        <div id="lv-container"  data-id="city" data-uid="MTAyMC81NDY1Ni8zMTEyNw==">
             <script type="text/javascript">
            (function(d, s) {
                var j, e = d.getElementsByTagName(s)[0];
@@ -33,19 +33,22 @@
             </script>
         <noscript> 라이브리 댓글 작성을 위해 JavaScript를 활성화 해주세요</noscript>
         </div>
+        
+        <!--Start of Tawk.to Script-->
+        <div id ="chat">
+            <script type="text/javascript">
+                var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+                (function(){
+                    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+                    s1.async=true;
+                    s1.src='https://embed.tawk.to/618a0f606bb0760a4941c074/1fk1ko4ur';
+                    s1.charset='UTF-8';
+                    s1.setAttribute('crossorigin','*');
+                    s0.parentNode.insertBefore(s1,s0);
+                })();
+            </script>
+            <!--End of Tawk.to Script-->
+        </div>
         </p>        
-          <!--Start of Tawk.to Script-->
-        <script type="text/javascript">
-            var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-            (function(){
-            var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-            s1.async=true;
-            s1.src='https://embed.tawk.to/618a0f606bb0760a4941c074/1fk1ko4ur';
-            s1.charset='UTF-8';
-            s1.setAttribute('crossorigin','*');
-            s0.parentNode.insertBefore(s1,s0);
-            })();
-        </script>
-        <!--End of Tawk.to Script-->
     </body>
 </html>
