--- a/index.html
+++ b/index.html
@@ -17,7 +17,22 @@
         </p> 
         <p style = "margin-top: 400px;" width = "50%"> 
         <!-- Live re  Code (댓글기능)-->
-        <div id="lv-container"  data-id="city" data-uid="MTAyMC81NDY1Ni8zMTEyNw==">
+        <!--Start of Tawk.to Script-->
+        <div id ="chat" style="margin-left:50px;">
+            <script type="text/javascript">
+                var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+                (function(){
+                    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+                    s1.async=true;
+                    s1.src='https://embed.tawk.to/618a0f606bb0760a4941c074/1fk1ko4ur';
+                    s1.charset='UTF-8';
+                    s1.setAttribute('crossorigin','*');
+                    s0.parentNode.insertBefore(s1,s0);
+                })();
+            </script>
+            <!--End of Tawk.to Script-->
+        </div>
+        <div id="lv-container" width= 50%;  data-id="city" data-uid="MTAyMC81NDY1Ni8zMTEyNw==">
             <script type="text/javascript">
            (function(d, s) {
                var j, e = d.getElementsByTagName(s)[0];
@@ -32,22 +47,6 @@
            })(document, 'script');
             </script>
         <noscript> 라이브리 댓글 작성을 위해 JavaScript를 활성화 해주세요</noscript>
-        </div>
-        
-        <!--Start of Tawk.to Script-->
-        <div id ="chat">
-            <script type="text/javascript">
-                var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-                (function(){
-                    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-                    s1.async=true;
-                    s1.src='https://embed.tawk.to/618a0f606bb0760a4941c074/1fk1ko4ur';
-                    s1.charset='UTF-8';
-                    s1.setAttribute('crossorigin','*');
-                    s0.parentNode.insertBefore(s1,s0);
-                })();
-            </script>
-            <!--End of Tawk.to Script-->
         </div>
         </p>        
     </body>
