--- a/index.html
+++ b/index.html
@@ -3,19 +3,32 @@
     <head>
         <title>HJ's Study</title>
         <meta charset="utf-8">
+        <style>
+            a {
+                color: red;                
+            }
+            h1 {
+                font-size: 45px;
+                color: blue;
+                text-align: center;
+            }
+            p{
+                margin-top: 50px;
+            }
+            
+        </style>
     </head>
     <body>
-        <h1>Study Test Homepage</h1>
-        <p style="margin-top: 20px;"><a href = "https://www.naver.com" target="_blank" title="네이버">네이버</a></p>
+        <h1>Study Test Homepage</h1>      
         <ol>
-            <li><a href = "1.html"> 1번</a></li>
-            <li><a href = "2.html"> 2번</a></li>
-            <li><a href = "3.html"> 3번(임시로 페이커 짤)</a></li>
+            <li><a href = "1.html" target="_blank"> 1번</a></li>
+            <li><a href = "2.html" target="_blank"> 2번</a></li>
+            <li><a href = "3.html" target="_blank"> 3번(임시로 페이커 짤)</a></li>
         </ol>
         <p>
             <iframe width="50%" height="25%" src="https://www.youtube.com/embed/X5xcqJCblVg?autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </p> 
-        <p style = "margin-top: 400px;" width = "50%"> 
+        <p style = "margin-top: 50px;" width = "50%"> 
         <!-- Live re  Code (댓글기능)-->
         <!--Start of Tawk.to Script-->
         <div id ="chat" style="margin-left:50px;">
