--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
             p{
                 margin-top: 50px;
             }
+            div{
+                width: 70%;
+                
+            }
             
         </style>
     </head>
