modified chat style

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <p style = "margin-top: 50px;" width = "50%"> 
         <!-- Live re  Code (댓글기능)-->
         <!--Start of Tawk.to Script-->
-        <div id ="chat" style="margin-left:50px;">
+        <div id ="chat" style= "margin-left: 50px;" style="margin-left:50px;">
             <script type="text/javascript">
                 var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
                 (function(){
@@ -49,7 +49,7 @@
             </script>
             <!--End of Tawk.to Script-->
         </div>
-        <div id="lv-container" width= 50%;  data-id="city" data-uid="MTAyMC81NDY1Ni8zMTEyNw==">
+        <div id="lv-container" data-id="city" data-uid="MTAyMC81NDY1Ni8zMTEyNw==">
             <script type="text/javascript">
            (function(d, s) {
                var j, e = d.getElementsByTagName(s)[0];
