--- a/1.html
+++ b/1.html
@@ -7,9 +7,9 @@
 <body>
   <h1><a href = "index.html">Main-Home</a></h1>  
   <ol>
-    <li><a href = "1.html"> 1번</a></li>
-    <li><a href = "2.html"> 2번</a></li>
-    <li><a href = "3.html"> 3번(임시로 페이커 짤)</a></li>
+    <li><a href = "1.html" target="_blank"> 1번_Movie</a></li>
+    <li><a href = "2.html" target="_blank"> 2번_Photo</a></li>
+    <li><a href = "3.html" target="_blank"> 3번(임시 페이커 짤)</a></li>
   </ol>
 </body>
 </html>
