--- a/index.html
+++ b/index.html
@@ -3,31 +3,14 @@
     <head>
         <title>HJ's Study</title>
         <meta charset="utf-8">
-        <style>
-            a {
-                color: red;                
-            }
-            h1 {
-                font-size: 45px;
-                color: blue;
-                text-align: center;
-            }
-            p{
-                margin-top: 50px;
-            }
-            div{
-                width: 70%;
-                
-            }
-            
-        </style>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>Study Test Homepage</h1>      
         <ol>
-            <li><a href = "1.html" target="_blank"> 1번</a></li>
-            <li><a href = "2.html" target="_blank"> 2번</a></li>
-            <li><a href = "3.html" target="_blank"> 3번(임시로 페이커 짤)</a></li>
+            <li><a href = "1.html" target="_blank" class ="saw"> 1번_Movie</a></li>
+            <li><a href = "2.html" target="_blank" class ="saw"> 2번_Photo</a></li>
+            <li><a href = "3.html" target="_blank" class ="saw" id="active"> 3번(임시 페이커 짤)</a></li>
         </ol>
         <p>
             <iframe width="50%" height="25%" src="https://www.youtube.com/embed/X5xcqJCblVg?autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
