--- a/1.html
+++ b/1.html
@@ -10,6 +10,7 @@
     <li><a href = "1.html" target="_blank"> 1번_Movie</a></li>
     <li><a href = "2.html" target="_blank"> 2번_Photo</a></li>
     <li><a href = "3.html" target="_blank"> 3번(임시 페이커 짤)</a></li>
+    <li><a href = "grid.html">4번 grid</a></li>
   </ol>
 </body>
 </html>
