--- a/index.html
+++ b/index.html
@@ -6,19 +6,22 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Study Test Homepage</h1>      
-        <ol>
-            <li><a href = "1.html" target="_blank" class ="saw"> 1번_Movie</a></li>
-            <li><a href = "2.html" target="_blank" class ="saw"> 2번_Photo</a></li>
-            <li><a href = "3.html" target="_blank" class ="saw" id="active"> 3번(임시 페이커 짤)</a></li>
-        </ol>
+        <h1>Study Test Homepage</h1>
+        <div id="grid">            
+            <ol>
+                <li><a href = "1.html" target="_blank" class ="saw"> 1번_Movie</a></li>
+                <li><a href = "2.html" target="_blank" class ="saw"> 2번_Photo</a></li>
+                <li><a href = "3.html" target="_blank" class ="saw" id="active"> 3번(임시 페이커 짤)</a></li>
+                <li><a href = "grid.html">4번 grid</a></li>
+            </ol>
+        </div>      
         <p>
             <iframe width="50%" height="25%" src="https://www.youtube.com/embed/X5xcqJCblVg?autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </p> 
         <p style = "margin-top: 50px;" width = "50%"> 
         <!-- Live re  Code (댓글기능)-->
-        <!--Start of Tawk.to Script-->
         <div id ="chat" style= "margin-left: 50px;" style="margin-left:50px;">
+            <!--Start of Tawk.to Script-->
             <script type="text/javascript">
                 var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
                 (function(){
