--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
         <h1>Study Test Homepage</h1>
         <div id="grid">            
             <ol>
-                <li><a href = "1.html" target="_blank" class ="saw"> 1번_Movie</a></li>
-                <li><a href = "2.html" target="_blank" class ="saw"> 2번_Photo</a></li>
-                <li><a href = "3.html" target="_blank" class ="saw" id="active"> 3번(임시 페이커 짤)</a></li>
+                <li><a href = "1.html"  class ="saw"> 1번_Movie</a></li>
+                <li><a href = "2.html"  class ="saw"> 2번_Photo</a></li>
+                <li><a href = "3.html"  class ="saw" id="active"> 3번(임시 페이커 짤)</a></li>
                 <li><a href = "grid.html">4번 grid</a></li>
+                <li><a href = "https://www.jobkorea.co.kr/">이직준비용 잡코리아</a></li>
             </ol>
         </div>      
         <p>
