유튜브 영상 추가 삽입
내가 만든 게임포폴 영상 추가

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
             <ol>
                 <li><a href = "1.html"  class ="saw"> 1번_Movie</a></li>
                 <li><a href = "2.html"  class ="saw"> 2번_Photo</a></li>
-                <li><a href = "3.html"  class ="saw" id="active"> 3번(임시 페이커 짤)</a></li>
+                <li><a href = "3.html"  class ="saw" id="active"> 3번(게임만든 포폴영상)</a></li>
                 <li><a href = "grid.html">4번 grid</a></li>
-                <li><a href = "https://www.jobkorea.co.kr/">이직준비용 잡코리아</a></li>
+                <li><a href = "https://www.jobkorea.co.kr/">이직 준비용 잡코리아</a></li>
             </ol>
         </div>      
         <p>
