--- a/2.html
+++ b/2.html
@@ -11,7 +11,7 @@
     <ol>
       <li><a href = "1.html" target="_blank"> 1번_Movie</a></li>
       <li><a href = "2.html" target="_blank"> 2번_Photo</a></li>
-      <li><a href = "3.html" target="_blank"> 3번(임시 페이커 짤)</a></li>
+      <li><a href = "3.html" target="_blank"> 3번(게임만든 포폴영상))</a></li>
       <li><a href = "grid.html">4번 grid</a></li>
     </ol>
       <div id = "article">
