--- a/3.html
+++ b/3.html
@@ -9,21 +9,16 @@
   <ol>
     <li><a href = "1.html" target="_blank"> 1번_Movie</a></li>
     <li><a href = "2.html" target="_blank"> 2번_Photo</a></li>
-    <li><a href = "3.html" target="_blank"> 3번(임시 페이커 짤)</a></li>
+    <li><a href = "3.html" target="_blank"> 3번(게임 포폴)</a></li>
     <li><a href = "grid.html">4번 grid</a></li>
-  </ol>
-  <!-- <h1>TEST</h1>
-  <ul>
-    <li>Test1</li>
-    <li>Test2</li>
-    <li>Test3</li>
-  </ul> -->
-  <h1>페이커 방송 짤</h1>
-  <!-- <p>대충 JavaScripts 설명하는 얘기
-    <img src="coding.jpg" width="70%">
-  </p> -->  
+  </ol>  
+  <h1>메이플 모작</h1>  
   <p>
-    <div style="width: 100%; height: 0px; position: relative; padding-bottom: 56.250%;"><iframe src="https://streamable.com/e/yut110" frameborder="0" width="100%" height="100%" allowfullscreen style="width: 100%; height: 100%; position: absolute;"></iframe></div>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/diKGcXV4sO8?autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </p>
+  <h1>거상 모작</h1>
+  <p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/RdqrIQQm6a8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </p>
 </body>
 </html> 
