3 html Title 수정

--- a/3.html
+++ b/3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>3.html (FAKER)</title>
+  <title>3.html (게임포폴))</title>
   <meta charset="UTF-8">
 </head>
 <body>
